# version-control-clean-check

./: Cargo.toml  README.md
.github/workflows/: general.yml  release.yml
src/: check.rs  error.rs  lib.rs
src/check/: supporting_code.rs
tests/: checks.rs  test_utils.rs
tests/utils/: git_commands.rs  mod.rs
