[package]
name = "version-control-clean-check"
version = "0.1.4"
authors = ["One <one.bgz1@gmail.com>"]
categories = []
documentation = "https://docs.rs/version-control-clean-check"
edition = "2021"
keywords = []
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/c-git/version-control-clean-check"
description = "Checks if the version control is clean. Based on code from Cargo."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.94", features = ["backtrace"] }
cargo-util = "0.2.16"
clap = { version = "4.5.23", features = [
    "cargo",
    "env",
    "derive",
    "wrap_help",
], optional = true }
git2 = "0.19.0"
thiserror = "2.0.8"

[dev-dependencies]
rstest = "0.23.0"
strum = { version = "0.26.3", features = ["derive", "strum_macros"] }

[features]
default = []
clap = ["dep:clap"]
